# ecombot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260716_0001_0001_enable_pgvector.py  20260716_0319_defd09b8380e_s1_domain_model.py  20260716_1537_bc0f537763c1_s3_policy_retrieval.py  20260717_0900_a1f4c7e21b90_s4_model_layer.py  20260717_1400_b7d2e9c04a10_s5_workflow_engine.py  20260718_0900_c9e5f1a83b20_s6_approvals_execution.py  20260718_1400_d1a6b3f92c40_s6_http_idempotency.py  20260719_0900_e2b7c4d15f30_s6_proposed_action_exec_states.py  20260719_1000_f3c8a5e26d40_s6_outbox_attempts.py  20260720_0900_a7d1e9f3b204_s7_audit_events.py
backend/app/: __init__.py  main.py
backend/app/actions/: __init__.py  cli.py  context.py  enums.py  errors.py  evaluation.py  handlers.py  references.py  registry.py  repository.py  revalidation.py
backend/app/api/: __init__.py  idempotency.py  middleware.py  router.py
backend/app/approvals/: README.md  __init__.py  cli.py  enums.py  errors.py  repository.py  service.py  snapshot.py
backend/app/audit/: README.md  __init__.py  cli.py  enums.py  evaluation.py  hashing.py  repository.py  service.py
backend/app/auth/: __init__.py  cli.py  dependencies.py  enums.py  jwt.py  models.py  passwords.py  service.py
backend/app/core/: __init__.py  config.py  context.py  logging.py  paths.py  pii.py
backend/app/db/: __init__.py  base.py  mixins.py  session.py
backend/app/evaluations/: README.md  (+1 more)
backend/scripts/: build_model_tasks_dataset.py  build_workflow_dataset.py
backend/tests/: conftest.py  factories.py  test_app.py  test_approval_action_evaluation.py  test_approval_api.py  test_approval_service.py  test_audit_log.py  test_config.py  test_execution_api.py  test_execution_properties.py  test_fixtures_integration.py  test_health.py  test_idempotency.py  test_llm_evaluation.py  test_llm_logging.py  test_llm_persistence.py  test_llm_prompts.py  test_llm_property.py  test_llm_providers.py  test_llm_redaction.py  test_llm_structured.py  test_llm_tasks.py  test_metrics.py  test_models_db.py  test_observability_evaluation.py  test_observability_logging.py  test_outbox_execution.py  test_outbox_payload.py  test_outbox_worker.py  test_pii.py  test_reliability.py  test_repositories.py  test_retrieval_chunker.py  test_retrieval_db.py  test_retrieval_embeddings.py  test_retrieval_eval.py  test_retrieval_property.py  test_retrieval_security.py  test_retrieval_support.py  test_rules_delivery.py  (+11 more)
(+236 files in other folders)
