[project]
name = "agentops-backend"
version = "0.1.0"
description = "AgentOps API — AI Customer Support Operations Platform (backend)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.35,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "bcrypt>=4.2,<5",
    "faker>=33,<38",
    "pgvector>=0.3,<0.4",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<0.28",
    "pyjwt>=2.9,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "hypothesis>=6.100,<7",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2",
    "types-PyYAML>=6.0,<7",
]

[tool.uv]
# This is a deployable application, not a distributable library: manage the
# environment and dependencies, but do not build/install the project itself.
# The `app` package is imported from the working directory at runtime.
package = false

# --- Ruff: lint, import sorting and formatting --------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # asserts and inline test secrets are expected
"alembic/*" = ["N999", "E501"]  # generated migration file naming/length
"app/seeds/*" = ["E501", "S311"]  # long synthetic strings; non-crypto RNG is fine here

# --- MyPy: near-strict typing -------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["alembic.*", "pgvector.*"]
ignore_missing_imports = true

# --- Pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
